--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scrum-project",
   "version": "0.1.0",
   "private": true,
+  "sideEffects": ["*.css"],
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -19,12 +20,11 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://localhost:7001",
   "scripts": {
     "start": "cross-env PORT=8080 react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "my_dev": "webpack serve --config webpack.config.dev.js",
+    "my_prod": "webpack build --config webpack.config.prod.js"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +43,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.1.4",
+    "cross-env": "^7.0.3",
+    "less-loader": "^11.1.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
+    "webpack-bundle-analyzer": "^4.8.0"
   }
 }
